--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5433/studentmanagement
+spring.datasource.url=jdbc:postgresql://containers-us-west-145.railway.app:6497/railway
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=rfEQgLxZ40nXm5tbwnp9
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 #spring.jpa.show-sql: true
 spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
-server.port=8090
